--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,17 +1,20 @@
 # Project information
-site_name: REPO_NAME_OR_SITE_NAME
+site_name: Policy Editor Documentation
 # defeine TOC or order of website-
 nav:
-  - Home: index.md
+  - Getting Started:
+    - Introduction: 'index.md'
+    - Installation procedures for the API: 'installation.md'
+    - Application architecture overview: 'architecture.md'
+  - API Endpoints: 'api.md'
 
-site_author: Sunny Bhaveen Chandra
+site_author: Abdulrahman Olamilekan
 site_description: >-
-  DESCRIPTION
+  This documentation explains how to use the Policy manager API and what it does
 
 # Repository
-repo_name: c17hawke/REPO_NAME
-repo_url: https://github.com/c17hawke/REPO_NAME
-
+repo_name: r-scheele/policy-editor-documentation
+repo_url: https://github.com/r-scheele/policy-editor-documentation
 # Configuration
 theme:
   name: material
