--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,10 +50,7 @@ extra:
     - icon: fontawesome/brands/instagram
       link: https://www.instagram.com/c17hawke/
 
-extra_javascript:
-  - javascripts/mathjax.js
-  - https://polyfill.io/v3/polyfill.min.js #?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
 
 markdown_extensions:
   - pymdownx.highlight:
@@ -72,5 +69,6 @@ markdown_extensions:
 plugins:
   - search
 
+
 copyright: |
-  &copy; 2022 <a href="https://github.com/c17hawke"  target="_blank" rel="noopener">Sunny Bhaveen Chandra</a>
+  &copy; 2022 <a href="http://www.geobeyond.it/"  target="_blank" rel="noopener">Geobeyond Srl</a>
